--- a/_posts/2017-01-06-206-sapiens-cp14.md
+++ b/_posts/2017-01-06-206-sapiens-cp14.md
@@ -4,6 +4,10 @@ title: 第十四章发现自己的无知
 pid: 206
 tags: [人类简史：从动物到上帝]
 ---
+第四部分
+科学革命
+图22 新墨西哥阿拉莫戈多（Alamogordo），1945年7月16日，早上5点29分53秒。这是第一颗原子弹引爆8秒后的影像。核物理学家罗伯特·奥本海默在看到这场爆炸之后，引述了《薄伽梵歌》（Bhagavad Gita）：“现在我成了死神，世界的毁灭者。”
+
 第十四章
 发现自己的无知
 假设有个西班牙农民，在公元1000年沉沉睡去，等到他醒来的时候已经过了500年，虽然这时哥伦布的水手已经登上新大陆，但他看看四周的世界，还是会感到十分熟悉。这时的科技、礼仪和国界都有许多不同，但这位做了个李伯大梦的中世纪农民仍然能有家的感觉。然而，如果是某位哥伦布的水手做了这场梦，醒来的时候听到的是21世纪的iPhone铃声，他会发现自己处在一个完全陌生、无法理解的世界。他很可能会问自己：“这是天堂吗？还是地狱?!”
