--- a/_posts/2017-03-20-227-centos-tmp.md
+++ b/_posts/2017-03-20-227-centos-tmp.md
@@ -37,3 +37,7 @@ tags: [linux, centos, tmp]
     [root@localhost ~]# export TEPDIR=/temp
     [root@localhost ~]# export TEMP=/temp
     [root@localhost ~]# chmod -R 1777 /temp
+
+
+# 解决方法二
+    [root@localhost ~]# chattr -i /tmp
