--- a/_posts/2017-10-26-262-marketing.md
+++ b/_posts/2017-10-26-262-marketing.md
@@ -128,6 +128,8 @@ tags: [营销]
 
 缺乏感、目标物与消费者能力，它们构成了“需求三角”模型。
 
+![](/uploads/2017/10/26-00.jpg)
+
 李叫兽的“需求三角”模型
 
 所有需求的构成必须满足这三要素，缺了其中任何一个角，最终需求都无法形成。失败的产品营销，追根溯源往往都是因为需求三角没有构建完成。
@@ -182,6 +184,8 @@ tags: [营销]
 你需要不断研究的是怎么让别人更需要你，他的缺乏感在哪里，这就是营销。
 
 我们有没有系统的方法来激发用户的缺乏感呢？今天我首次发布一张我自己研发并经常使用的表格，我称之为消费者落差表。
+
+![](/uploads/2017/10/26-01.jpg)
 
 李叫兽的“消费者落差表”
 
