Update and rename 2018-07-13-280-hr-mayi.md to 2018-07-13-280-hr-netflix.md

--- a/_posts/2018-07-13-280-hr-netflix.md
+++ b/_posts/2018-07-13-280-hr-netflix.md
@@ -20,7 +20,7 @@ tags: [管理, HR]
 
 # Netflix 究竟是如何吸引和管理人才的？
 
-只招最优秀的，把不够优秀的请走
+> 只招最优秀的，把不够优秀的请走
 
 回溯到 2001 年，互联网泡沫破灭打乱了公司的 IPO 计划，我们还裁掉了 1/3 的员工。但圣诞节时转机来了，DVD 播放机成为热门礼品，公司的 DVD 邮寄订阅业务也意外暴涨。
 
@@ -34,7 +34,8 @@ tags: [管理, HR]
 
 当时，我甚至做好了迎接泪水的准备，没想到劳拉很轻松地说：她对离开表示遗憾，但丰厚的离职补偿金可以让她考虑重返校园或参加培训，寻找新的职业发展路径。
 
-只雇用、奖励和容忍「成年人」
+> 只雇用、奖励和容忍「成年人」
+
 从业三十年，我发现很多大公司的 HR 往往花太多时间用于拟定人力资源管理的条例，以应付一小撮与公司利益不一致的员工，结果往往得不偿失。我们根本不会让这种人进入公司，我们筛选出的人是真正的“成年人”。
 
 自 Netflix 创始起，我们就制定了带薪假期的规定，并且一直用内部的办公系统记录出勤情况。公司上市后，审计师提出异议，认为应引入正式的办公考勤系统，对员工的休假时间做出清晰的解释。但里德和我都认为，**只要不违反相关法律，何必在意繁文缛节？**
