--- a/_posts/2018-07-13-280-hr-netflix.md
+++ b/_posts/2018-07-13-280-hr-netflix.md
@@ -183,3 +183,7 @@ At Netflix I worked with colleagues who were changing the way people consume fil
 [Netflix颠覆HR：我们只雇「成年人」](http://www.geekpark.net/news/197952)
 
 [How Netflix Reinvented HR](https://hbr.org/2014/01/how-netflix-reinvented-hr)
+
+![Freedom & Responsibility Culture](/uploads/2018/07/Freedom & Responsibility Culture.pdf)
+
+![Netflix文化：自由与责任中英文双语对照版](/uploads/2018/07/Netflix文化：自由与责任中英文双语对照版.ppt)
