--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Netflix Culture: Freedom & Responsibility
+title: Netflix Culture： Freedom & Responsibility
 pid: 281
 tags: [管理, HR]
 ---
