--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -5,8 +5,14 @@ pid: 281
 tags: [管理, HR]
 ---
 
-Netflix Culture: Freedom & Responsibility
+> Netflix Culture: Freedom & Responsibility
 
-Netflix文化：自由与责任
+> Netflix文化：自由与责任
 
+We Seek Excellence
 
+我们寻求卓越
+
+Our culture focuses on helping us achieve excellence
+
+我们的文化聚焦于帮助自己达成卓越
