--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -5,9 +5,9 @@ pid: 281
 tags: [管理, HR]
 ---
 
-> Netflix Culture: Freedom & Responsibility
+Netflix Culture: Freedom & Responsibility
 
-> Netflix文化：自由与责任
+Netflix文化：自由与责任
 
 We Seek Excellence
 
@@ -16,3 +16,25 @@ We Seek Excellence
 Our culture focuses on helping us achieve excellence
 
 我们的文化聚焦于帮助自己达成卓越
+
+# Seven Aspects of our Culture 文化的7个方面
+
+- Values are what we Value
+- High Performance
+- Freedom & Responsibility
+- Context, not Control
+- Highly Aligned, Loosely Coupled
+- Pay Top of Market
+- Promotions & Development
+
+
+# 文化的7个方面
+
+- 价值观来自于我们推崇和珍视的价值
+- 追求高绩效
+- 自由和责任
+- 情景管理而非控制
+- 认同一致，松散耦合
+- 支付市场最高工资
+- 晋升和成长
+
