--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -17,7 +17,7 @@ Our culture focuses on helping us achieve excellence
 
 我们的文化聚焦于帮助自己达成卓越
 
-# Seven Aspects of our Culture 文化的7个方面
+# Seven Aspects of our Culture
 
 - Values are what we Value
 - High Performance
@@ -38,3 +38,337 @@ Our culture focuses on helping us achieve excellence
 - 支付市场最高工资
 - 晋升和成长
 
+# Values are what we Value
+
+（价值观来自于我们推崇和珍视的价值）
+
+The actual company values, as opposed to the nice-sounding values, are shown by who gets rewarded, promoted, or let go
+
+公司真正的价值观和动听的价值观完全相反，是具体通过哪些人 **被奖励** 、 **被提升** 和 **被解雇** 来体现。
+
+Actual company values are the **behaviors** and **skills** that are valued in fellow employees
+
+真正的价值观是被员工所重视的行为和技能。
+
+At Netflix, we particularly value the following nine behaviors and skills in our colleagues…
+
+在Netflix，我们特别珍视以下9项同事们拥有的行为和技能…
+
+…meaning we hire and promote people who demonstrate these nine
+
+也意味着我们雇佣和升迁能够体现这9项特质的员工
+
+## Judgment(判断力)
+
+You make wise decisions (people, technical, business, and creative) despite ambiguity
+你在对人，对技术、对商务和对创新上能够做出明智的决定，摒弃模棱两可
+
+You identify root causes, and get beyond treating symptoms 
+你明辨事物根由，不为表象所惑
+
+You think strategically, and can articulate what you are, and are not, trying to do 
+你能战略性思考，有自知之明，并努力做到
+
+You smartly separate what must be done well now, and what can be improved later 
+你能很聪明地分清楚哪些事现在必须完成，哪些事可以稍后跟进
+
+## Communication(沟通力)
+
+You listen well, instead of reacting fast, so you can better understand 
+你善于 **聆听** ，而非快速反驳。如此你能够更好地理解
+
+You are concise and articulate in speech and writing 
+你在说和写的时候 **简洁清晰**
+
+You treat people with respect independent of their status or disagreement with you
+你待人接物心存敬意，不在意对方的身份，也不在意对方持有异议
+
+You maintain calm poise in stressful situations 
+在重压之下，你也能镇定自若
+
+## Impact(影响力)
+
+You accomplish amazing amounts of important work 
+你能完成众多重要工作
+
+You demonstrate consistently strong performance so colleagues can rely upon you 
+你的同事能仰仗你持续输出的强大工作能力
+
+
+You focus on great results rather than on process 
+你注重结果而非过程
+
+You exhibit bias-to-action, and avoid analysis-paralysis 
+你偏好先发制人而非谋定后动
+
+## Curiosity
+好奇心
+
+You learn rapidly and eagerly 
+快速学习且渴望学习
+
+You seek to understand our strategy, market, customers, and suppliers
+努力理解公司的战略、市场、用户和供应商
+
+You are broadly knowledgeable about business, technology and entertainment 
+拥有对商业、技术和娱乐的广泛认知
+
+You contribute effectively outside of your specialty 
+在你专长之外也能有效提供贡献
+
+## Innovation
+创新
+
+You re-conceptualize issues to discover practical solutions to hard problems
+你能重构概念以找出难题的特别解决之道 
+
+You challenge prevailing assumptions when warranted, and suggest better approaches
+你能挑战成见，给出更好的方法
+
+You create new ideas that prove useful 
+你能想出的新点子且被证实有效
+
+You keep us nimble by minimizing complexity and finding time to simplify 
+你能通过降低复杂度，找到简化时间的方法以保持公司的敏捷
+
+## Courage
+勇气
+
+
+You say what you think even if it is controversial 
+你想说什么就说什么，哪怕有所争议
+
+You make tough decisions without agonizing 
+你能毫无痛苦地作出艰难决定
+
+You take smart risks 
+你能明智地冒险
+
+You question actions inconsistent with our values 
+你能质疑和我们价值观不一的行为
+
+## Passion
+热情
+
+
+You inspire others with your thirst for excellence 
+以你对卓越的渴望激励他人
+
+You care intensely about Netflix‘s success 
+你对公司的成功深系于心
+
+
+You celebrate wins 
+你热爱胜利
+
+You are tenacious
+你坚忍不拔
+
+
+## Honesty
+诚实
+
+
+You are known for candor and directness 
+众人认为你坦白直率
+
+You are non-political when you disagree with others 
+你不同意他人意见时并非出于公司政治的考量
+
+You only say things about fellow employees you will say to their face 
+你不背后议论他人
+
+You are quick to admit mistakes 
+你能很快承认错误
+
+
+## Selflessness
+无私
+
+
+You seek what is best for Netflix, rather than best for yourself or your group
+你寻求的是什么对Netflix最好，而不是什么对你自己和你的小团队最好 
+
+You are ego-less when searching for the best ideas 
+当大家一起找寻最佳方案时，你没有那么多自我要维护
+
+You make time to help colleagues 
+你愿意花时间帮助同事
+
+You share information openly and proactively
+你能主动开放地分享资讯
+
+
+# High Performance （追求高绩效）
+
+Imagine if every person at Netflix is someone you respect and learn from…
+
+设想一下，如果公司里的任何一个员工，你都发自内心地尊重，而且能够从他们身上学到东西…
+
+Great Workplace is Stunning Colleagues
+
+最好的工作环境是拥有 **一群超级棒的同事**
+
+Great workplace is not espresso, lush benefits, sushi lunches, grand parties, or nice offices
+
+最好的工作环境不在于上等咖啡、丰厚福利、日本料理、盛大派对和漂亮办公室
+
+We do some of these things, but only if they are efficient at attracting and retaining **stunning colleagues**
+
+我们也会做上述的事情，但那只是因为这样才能吸引和留住那些 **超级棒的同事**。
+
+Like every company, we try to hire well
+
+和许多公司一样，我们努力将招聘做好
+
+Unlike many companies, we practice: adequate performance gets a generous severance package
+
+和许多公司不一样，我们实行：仅仅做到称职的员工，也要拿钱走人
+
+We’re a team, not a family
+
+我们是个团队，不是个家庭
+
+We’re like a pro sports team, not a kid’s recreational team
+
+我们就像个专业运动队，而不是小孩子过家家
+
+Netflix leadershire, develop and cut smartly, so we have stars in every position
+
+因为Netflix的领导能够明智地聘用、培养和裁员，所以我们在每个岗位上都是明星员工
+
+## The Keeper Test Managers Use (管理者的员工去留测试):
+
+Which of my people, if they told me they were leaving,for a similar job at a peer company, would I fight hard to keep at Netflix?
+
+我手下的员工里，如果有人要辞职去同业公司做类似工作，有哪些人是我会拼命挽留的？
+
+The other people should get a generous severance now, so we can open a slot to try to find a star for that role
+
+如果不是，那么这样的员工我们只能让他们拿钱走人，这样我们才能空出位子，为团队找到明星员工。
+
+## Honesty Always永远保持诚实
+
+As a leader, no one in your group should be materially surprised of your views
+
+作为领导者，你团队中的任何一名成员都不应该对你的评估感到特别惊奇
+
+Candor is not just a leader’s responsibility, and you should periodically ask your manager: “If I told you I were leaving, how hard would you work to change my mind?”
+
+坦诚不单是领导者的责任，作为员工，你也应该定期地询问你领导：如果我告诉你我要辞职，那你会多大程度上努力挽留我？
+
+## All of Us are Responsible for Ensuring We Live our Values我们所有人都有责任确保价值观的延续
+
+“You question actions inconsistent with our values” is part of the Courage value
+
+质疑和我们价值观不一致的行为”是勇气那一章的一部分。
+
+Akin to the honor code pledge: “I will not lie, nor cheat, nor steal, nor tolerate those who do”
+
+和我们的荣誉准则一致：“我不撒谎，不欺诈，不偷窃，也绝不容忍这么做的人。
+
+## Pro Sports Team Metaphor is Good, but Imperfect专业运动队的比喻很好，但有瑕疵。
+
+Athletic teams have a fixed number of positions, so team members are always competing with each other for one of the precious slots
+
+运动队有固定的位置数量，所以成员们会为了宝贵的位置而相互竞争。
+
+## Corporate Team合作团队
+
+The more talent we have, the more we can accomplish, so our people assist each other all the time
+
+我们的团队能力越大，我们所取得的成就也就越大，所以我们的人始终彼此帮助。
+
+Internal “cutthroat” or “sink or swim” behavior is rare and not tolerated
+
+内部人员之间的倾轧行为非常少见，而且不被容忍。
+
+## We Help Each Other To Be Great我们彼此帮助，共同成就。
+
+## Isn’t Loyalty Good?  忠诚有益？
+
+Loyalty is Good忠诚有益
+
+- Loyalty is good as a stabilizer
+- People who have been stars for us, and hit a bad patch, get a near term pass because we think they are likely to become stars for us again
+- We want the same:  if Netflix hits a temporary bad patch, we want people to stick with us
+- But unlimited loyalty to a shrinking firm, or to an ineffective employee, is not what we are about
+
+- 忠诚就像稳定器一样有益。
+- 那些想成为明星员工的人表现低迷，会得到原谅，因为我们认为他们很有可能会再次成为我们的明星员工。
+- 我们也想得到同样的回馈：如果Netflix遭遇短期低迷，我们希望员工会和我们紧密团结在一起。
+- 但是，对于一个走下坡路的公司，或者对一个无效率的员工，无限度的忠诚并非我们所希望的。
+
+
+## What about Hard Workers?如何对待勤奋员工？
+
+Hard Work – Not Relevant勤奋工作---并非切题
+
+- We don’t measure people by how many hours they work or how much they are in the office
+- We do care about accomplishing great work
+- Sustained B-level performance, despite “A for effort”, generates a generous severance package, with respect
+- Sustained A-level performance, despite minimal effort, is rewarded with more responsibility and great pay
+
+
+- 我们不会用花了多少小时工作，或者有多少人呆在办公室里作为衡量员工和团队的标准。
+- 我们只在意是否完成了伟大的工作成就。
+- 持续做出B级的工作输出，不想着做到A级的效能，只能请他拿钱走人，客客气气的。
+- 保持A级的工作输出，追求最大效用，将会被委以重任，酬以重金。
+
+
+
+## What about Brilliant Jerks? 如何对待不羁天才？ 
+
+Brilliant Jerks不羁天才
+
+- Some companies tolerate them
+- For us, cost to effective teamwork is too high
+- Diverse styles are fine – as long as person embodies the 9 values
+
+- 有些公司容忍他们。
+- 对于我们而言，这种人会使得保持团队效率的代价太大。
+- 保持多样性的风格很好，但这个人得体现出前述9种价值观。
+
+## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
+
+In procedural work, the best are 2x better than the average. In creative/inventive work, the best are 10x better than the average, so huge premium on creating effective teams of the best
+
+对于程序型的工作，顶级员工的输出量是一般员工的2倍。 对于创新型/创意型的工作，顶级员工的输出量是一般员工的10倍！以顶级员工组成的高效团队就有那么大提升！
+
+## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
+
+Great Workplace is Stunning Colleagues
+
+最好的工作环境是拥有一群超级棒的同事。
+
+## Our High Performance Culture Not Right for Everyone我们的高效能文化并非对所有人都合适。
+
+- Many people love our culture, and stay a long time
+- 许多人喜欢我们的企业文化，并且呆了很长时间
+-- They thrive on excellence and candor and change
+-- 他们因为公司的卓越、坦率和变化而成长。
+-- They would be disappointed if given a severance package, but lots of mutual warmth and respect
+-- 他们会因为被辞退而感觉到失望，但是带走彼此之间的热情和尊重。
+
+- Some people, however, value job security and stability over performance, and don’t like our culture
+- 部分人看重工作的安稳甚于高效输出，而且并不喜欢我们的企业文化。
+-- They feel fearful at Netflix
+-- 他们在Netflix会心怀忧惧。
+-- They are sometimes bitter if let go, and feel that we are political place to work
+-- 如果让他们走人，有时他们会感到苦涩，觉得我们在搞办公室政治。
+
+- We’re getting better at attracting only the former, and helping the latter realize we are not right for them
+- 在吸引前一类人这方面，我们正在越做越好。同时，我们帮助后者认识到这里并不适合他们。
+
+
+
+# Freedom & Responsibility（自由和责任）
+
+#Context, not Control（情景管理而非控制）
+
+#Highly Aligned, Loosely Coupled（认同一致，松散耦合）
+
+#Pay Top of Market（支付市场最高工资）
+
+
+#Promotions & Development （晋升和成长）
