--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -345,17 +345,17 @@ Great Workplace is Stunning Colleagues
 
 - Many people love our culture, and stay a long time
 - 许多人喜欢我们的企业文化，并且呆了很长时间
--- They thrive on excellence and candor and change
--- 他们因为公司的卓越、坦率和变化而成长。
--- They would be disappointed if given a severance package, but lots of mutual warmth and respect
--- 他们会因为被辞退而感觉到失望，但是带走彼此之间的热情和尊重。
+  - They thrive on excellence and candor and change
+  - 他们因为公司的卓越、坦率和变化而成长。
+  - They would be disappointed if given a severance package, but lots of mutual warmth and respect
+  - 他们会因为被辞退而感觉到失望，但是带走彼此之间的热情和尊重。
 
 - Some people, however, value job security and stability over performance, and don’t like our culture
 - 部分人看重工作的安稳甚于高效输出，而且并不喜欢我们的企业文化。
--- They feel fearful at Netflix
--- 他们在Netflix会心怀忧惧。
--- They are sometimes bitter if let go, and feel that we are political place to work
--- 如果让他们走人，有时他们会感到苦涩，觉得我们在搞办公室政治。
+  - They feel fearful at Netflix
+  - 他们在Netflix会心怀忧惧。
+  - They are sometimes bitter if let go, and feel that we are political place to work
+  - 如果让他们走人，有时他们会感到苦涩，觉得我们在搞办公室政治。
 
 - We’re getting better at attracting only the former, and helping the latter realize we are not right for them
 - 在吸引前一类人这方面，我们正在越做越好。同时，我们帮助后者认识到这里并不适合他们。
