--- a/_posts/2018-07-16-281-hr-netflix.md
+++ b/_posts/2018-07-16-281-hr-netflix.md
@@ -243,11 +243,11 @@ Which of my people, if they told me they were leaving,for a similar job at a pee
 
 我手下的员工里，如果有人要辞职去同业公司做类似工作，有哪些人是我会拼命挽留的？
 
-The other people should get a generous severance now, so we can open a slot to try to find a star for that role
+The other people should get a generous severance now, so we can open a slot to try to find a star for that role
 
 如果不是，那么这样的员工我们只能让他们拿钱走人，这样我们才能空出位子，为团队找到明星员工。
 
-## Honesty Always永远保持诚实
+## Honesty Always永远保持诚实
 
 As a leader, no one in your group should be materially surprised of your views
 
@@ -257,37 +257,37 @@ Candor is not just a leader’s responsibility, and you should periodically ask 
 
 坦诚不单是领导者的责任，作为员工，你也应该定期地询问你领导：如果我告诉你我要辞职，那你会多大程度上努力挽留我？
 
-## All of Us are Responsible for Ensuring We Live our Values我们所有人都有责任确保价值观的延续
+## All of Us are Responsible for Ensuring We Live our Values我们所有人都有责任确保价值观的延续
 
 “You question actions inconsistent with our values” is part of the Courage value
 
 质疑和我们价值观不一致的行为”是勇气那一章的一部分。
 
-Akin to the honor code pledge: “I will not lie, nor cheat, nor steal, nor tolerate those who do”
+Akin to the honor code pledge: “I will not lie, nor cheat, nor steal, nor tolerate those who do”
 
 和我们的荣誉准则一致：“我不撒谎，不欺诈，不偷窃，也绝不容忍这么做的人。
 
-## Pro Sports Team Metaphor is Good, but Imperfect专业运动队的比喻很好，但有瑕疵。
+## Pro Sports Team Metaphor is Good, but Imperfect专业运动队的比喻很好，但有瑕疵。
 
 Athletic teams have a fixed number of positions, so team members are always competing with each other for one of the precious slots
 
 运动队有固定的位置数量，所以成员们会为了宝贵的位置而相互竞争。
 
-## Corporate Team合作团队
+## Corporate Team合作团队
 
-The more talent we have, the more we can accomplish, so our people assist each other all the time
+The more talent we have, the more we can accomplish, so our people assist each other all the time
 
-我们的团队能力越大，我们所取得的成就也就越大，所以我们的人始终彼此帮助。
+我们的团队能力越大，我们所取得的成就也就越大，所以我们的人始终彼此帮助。
 
-Internal “cutthroat” or “sink or swim” behavior is rare and not tolerated
+Internal “cutthroat” or “sink or swim” behavior is rare and not tolerated
 
 内部人员之间的倾轧行为非常少见，而且不被容忍。
 
-## We Help Each Other To Be Great我们彼此帮助，共同成就。
+## We Help Each Other To Be Great我们彼此帮助，共同成就。
 
-## Isn’t Loyalty Good?  忠诚有益？
+## Isn’t Loyalty Good?  忠诚有益？
 
-Loyalty is Good忠诚有益
+Loyalty is Good忠诚有益
 
 - Loyalty is good as a stabilizer
 - People who have been stars for us, and hit a bad patch, get a near term pass because we think they are likely to become stars for us again
@@ -300,9 +300,9 @@ Loyalty is Good忠诚有益
 - 但是，对于一个走下坡路的公司，或者对一个无效率的员工，无限度的忠诚并非我们所希望的。
 
 
-## What about Hard Workers?如何对待勤奋员工？
+## What about Hard Workers?如何对待勤奋员工？
 
-Hard Work – Not Relevant勤奋工作---并非切题
+Hard Work – Not Relevant勤奋工作---并非切题
 
 - We don’t measure people by how many hours they work or how much they are in the office
 - We do care about accomplishing great work
@@ -317,9 +317,9 @@ Hard Work – Not Relevant勤奋工作---并非切题
 
 
 
-## What about Brilliant Jerks? 如何对待不羁天才？ 
+## What about Brilliant Jerks? 如何对待不羁天才？ 
 
-Brilliant Jerks不羁天才
+Brilliant Jerks不羁天才
 
 - Some companies tolerate them
 - For us, cost to effective teamwork is too high
@@ -329,46 +329,392 @@ Brilliant Jerks不羁天才
 - 对于我们而言，这种人会使得保持团队效率的代价太大。
 - 保持多样性的风格很好，但这个人得体现出前述9种价值观。
 
-## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
+## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
 
 In procedural work, the best are 2x better than the average. In creative/inventive work, the best are 10x better than the average, so huge premium on creating effective teams of the best
 
-对于程序型的工作，顶级员工的输出量是一般员工的2倍。 对于创新型/创意型的工作，顶级员工的输出量是一般员工的10倍！以顶级员工组成的高效团队就有那么大提升！
+对于程序型的工作，顶级员工的输出量是一般员工的2倍。 对于创新型/创意型的工作，顶级员工的输出量是一般员工的10倍！以顶级员工组成的高效团队就有那么大提升！
 
-## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
+## Why are we so insistent on high performance?为什么我们对高效能如此坚持？
 
 Great Workplace is Stunning Colleagues
 
 最好的工作环境是拥有一群超级棒的同事。
 
-## Our High Performance Culture Not Right for Everyone我们的高效能文化并非对所有人都合适。
+## Our High Performance Culture Not Right for Everyone我们的高效能文化并非对所有人都合适。
 
 - Many people love our culture, and stay a long time
-- 许多人喜欢我们的企业文化，并且呆了很长时间
   - They thrive on excellence and candor and change
-  - 他们因为公司的卓越、坦率和变化而成长。
   - They would be disappointed if given a severance package, but lots of mutual warmth and respect
-  - 他们会因为被辞退而感觉到失望，但是带走彼此之间的热情和尊重。
-
 - Some people, however, value job security and stability over performance, and don’t like our culture
-- 部分人看重工作的安稳甚于高效输出，而且并不喜欢我们的企业文化。
   - They feel fearful at Netflix
-  - 他们在Netflix会心怀忧惧。
   - They are sometimes bitter if let go, and feel that we are political place to work
-  - 如果让他们走人，有时他们会感到苦涩，觉得我们在搞办公室政治。
-
 - We’re getting better at attracting only the former, and helping the latter realize we are not right for them
+
+- 许多人喜欢我们的企业文化，并且呆了很长时间
+  - 他们因为公司的卓越、坦率和变化而成长。
+  - 他们会因为被辞退而感觉到失望，但是带走彼此之间的热情和尊重。
+- 部分人看重工作的安稳甚于高效输出，而且并不喜欢我们的企业文化。
+  - 他们在Netflix会心怀忧惧。
+  - 如果让他们走人，有时他们会感到苦涩，觉得我们在搞办公室政治。
 - 在吸引前一类人这方面，我们正在越做越好。同时，我们帮助后者认识到这里并不适合他们。
 
 
 
 # Freedom & Responsibility（自由和责任）
 
+## The Rare Responsible Person
+
+-Self motivating
+-Self aware
+-Self disciplined
+-Self improving
+-Acts like a leader
+-Doesn’t wait to be told what to do
+-Picks up the trash lying on the floor
+
+- 自励
+- 自知
+- 自律
+- 自我提升
+- 如同领导者一般行事
+- 不会等着被叫去做事
+- 主动捡起地上的垃圾
+
+Responsible People **Thrive** on Freedom, and are **Worthy** of Freedom
+
+有责任感的人因为自由而 **成长** ，也 **配得上** 这份自由。
+
+
+Our model is to increase employee freedom as we grow,rather than limit it, to continue to attract and nourish innovative people, so we have better chance of sustained success
+
+公司成长的同时增进员工的自由，而非限制；持续吸引和培育有创新精神的员工，使得公司更有可能维继成功。
+
+Most Companies  Curtail Freedom as they get Bigger
+
+大多数公司伴随成长而来的是缩减员工自由
+
+![]()
+
+Why Do Most Companies Curtail Freedom and Become Bureaucratic as they Grow?
+
+为什么大多数公司成长伴随着员工自由的缩减和公司的日益官僚化？
+
+Desire for Bigger Positive Impact Creates Growth
+
+对于做大的渴望压缩了创造的增长
+
+![]()
+
+Growth Increases Complexity
+
+成长增加了公司的复杂度
+
+
+
+Growth Also Often Shrinks Talent Density
+
+成长经常稀释了人才密度
+
+![]()
+
+## Chaos Emerges（混乱出现）
+
+Chaos and errors spike here – businesshas become too complex to runinformally with this talent level
+（混乱和错误钉牢这里，在这个人才水平上，业务已经变得太过复杂而不可能以非范式的形态运行。）
+
+![]()
+
+## Process Emerges to Stop the Chaos流程开始出现以停止混乱
+
+No one loves process, but feels good compared to the pain of chaos
+没有人喜欢流程，但是和混乱带来的痛苦相比，前者让人感觉好一点。
+
+“Time to grow up” becomes the professional management’s mantra
+“成长的时候到了”已经成为职业经理人的密咒。
+
+![]()
+
+## Process-focus Drives More Talent Out强调流程作业驱离更多人才
+
+![]()
+
+## Process Brings Seductively Strong Near-Term Outcome流程作业引出强有力的短期行为结果
+
+- A highly-successful process-driven company
+  - With leading share in its market
+  - Minimal thinking required
+  - Few mistakes made – very efficient
+  - Few curious innovator-mavericks remain
+  - Very optimized processes for its existing market
+  - Efficiency has trumped flexibility
+
+- 一个高度成功的流程驱动型公司
+  - 在所处的市场上占据领先份额
+  - 对思考的需求最少
+  - 很少犯错---听起来不错
+  - 很少有好奇的创新者---难有突破
+  - 对既存市场拥有高度优化的流程
+  - 效率战胜了灵活性
+
+## Then the Market Shifts…接着市场变了…
+
+- Market shifts due to new technology or competitors or business models
+- Company is unable to adapt quickly 
+  - because the employees are extremely good at following the existing processes, and process adherence is the value system
+- Company generally grinds painfully into irrelevance
+
+- 由于新技术或者新对手或者新商业模式的出现，市场变了。
+- 前述公司不能快速适应
+  - 因为员工们已经极端适应既有的流程作业，对流程的依靠是系统价值的核心。
+- 这样的公司将会痛苦地被碾成昨日黄花。
+
+## Seems Like Three Bad Options貌似更糟的第三种选择
+
+- Stay creative by staying small, but therefore have less impact
+- Avoid rules as you grow, and suffer chaos
+- Use process as you grow to drive efficient execution of current model, but cripple creativity, flexibility, and ability to thrive when your market eventually changes
+
+- 通过保持公司小型化而保存创新能力，但是因此失去市场影响力。
+- 成长的同时不设立规则，然后为混乱所苦。
+- 当公司成长时，使用流程驱动现有模式的有效执行。当市场最终改变时，只能用跛脚的创新能力、灵活性和业务能力实现成长。
+
+## A Fourth Option第4种选择
+
+- Avoid Chaos as you grow with Ever More High Performance People – not with Rules
+  - Then you can continue to mostly run informally with self-discipline, and avoid chaos
+  - The run informally part is what enables and attracts creativity
+
+- 通过和更多高效能员工共同成长，而非制定规则以避免混乱
+  - 于是你可以最大程度上凭借自律而使得灵活运作的业务得以进行，同时避免混乱
+  - 灵活运作的那一部分能够激发和吸引创造力
+
+## The Key:  Increase Talent Density faster than Complexity Grows关键点：以超过复杂度提升的速度提升人才密度
+
+![]()
+
+## Increase Talent Density提升人才密度
+
+- Top of market compensation
+- Attract high-value people through freedom to make big impact
+- Be demanding about high performance culture
+
+- 支付市场最高薪酬
+- 用自由吸引高价值人才产生巨大影响
+- 强化高效能的企业文化
+
+## Minimize Complexity Growth将复杂度增长降至最小
+
+- Few big products vs many small ones
+- Eliminate distracting complexity (barnacles)
+- Be wary of efficiency optimizations that increase complexity and rigidity
+
+- 用少数大产品取代数量众多的小产品
+- 消除让人分散精力的复杂度（藤壶）
+- 警惕效率优化所带来的复杂度和僵化度增长
+
+Note: sometimes long-term simplicity is achieved only through bursts of complexity to rework current systems
+
+注：有时长期简单化只有通过现有系统爆发式的复杂性再造才能完成。
+
+With the Right People,  Instead of a Culture of Process Adherence, We have a Culture of Creativity and Self-Discipline,Freedom and Responsibility
+
+和对的人一起工作，而非流程控制他们，我们因而建立起富于创新精神和自律精神，自由和负责的企业文化
+
+Is Freedom Absolute?Are all rules & processes bad?
+
+自由是绝对需要的吗？是否所有的规则和流程都不好？
+
+
+Freedom is not absoluteLike “free speech”there are some limited exceptions to  “freedom at work”
+
+自由不是绝对的，正如“言论自由”一样，“工作中的自由”也有几项有限的例外
+
+
+## Two Types of Necessary Rules两类必要的规则
+
+- Prevent irrevocable disaster
+  - Financials produced are wrong
+  - Hackers steal our customers’ credit card info
+- Moral, ethical, legal issues
+  -Dishonesty, harassment are intolerable
+      
+- 为了阻止不可挽回灾难
+  - 财务程序错误
+  - 黑客窃取了我们顾客的信用卡号
+- 为了避免道德、伦理和法律问题
+  - 不诚实，性骚扰都是不能容忍的
+
+
+## Mostly, though, Rapid Recovery is the Right Model（大多数情况下，快速修正都是正确的模式）
+
+- Just fix problems quickly
+- High performers make very few errors
+- We’re in a creative-inventive market, not a safety-critical market like medicine or nuclear power
+- You may have heard preventing error is cheaper than fixing it
+  - Yes, in manufacturing or medicine, but…
+  - Not so in creative environments
+
+- 尽快修复问题
+- 高效能员工很少犯错
+- 我们处在一个创新的市场，而不是一个类似医药或者核能这样以安全性为第一的市场
+- 你也许听说过预防错误比修复代价更低
+  - 是的，在制造业或者制药业的确如此，但
+  - 在创新型行业里并非如此。
+
+
+## “Good” versus “Bad” Process好流程VS.坏流程
+
+- “Good” process helps talented people get more done
+  - Letting others know when you are updating code
+  - Spend within budget each quarter so don’t have to coordinate every spending decision across departments
+  - Regularly scheduled strategy and context meetings
+
+
+- 好流程帮助人才搞定更多事情
+  - 当你在升级代码时让其他人知道
+  - 在每个季度都按照预算花钱，这样就不用频繁通过部门会议调整每一笔支出
+  - 定期制定战略和搞清会议背景
+
+- “Bad” process tries to prevent recoverable mistakes
+  - Get pre-approvals for $5k spending
+  - 3 people to sign off on banner ad creative
+  - Permission needed to hang a poster on a wall
+  - Multi-level approval process for projects
+  - Get 10 people to interview each candidate
+
+- 坏流程试图阻止可以恢复的错误
+  - 得到预先批准的5000美金支出额度
+  - 要3个人签字才能终止的横幅广告创意
+  - 在墙上贴个海报需要的许可
+  - 项目所需的多层级许可流程
+  - 找10个人去面试每一个应聘者
+
+## Rule Creep规则潜行
+
+- “Bad” processes tend to creep in
+  - Preventing errors just sounds so good
+- We try to get rid of rules when we can, to reinforce the point
+
+- 坏流程倾向于潜入
+  - 能够预防错误只是听起来不错
+- 我们尽可能去除繁文缛节，以强化工作重点。
+
+
+## Example: Netflix Vacation Policy and Tracking案例：Netflix休假规定和考勤管理
+
+Until 2004 we had the standard model of N days per year
+
+截至2004年，我们有一个每年N天假期的标准休假模式
+
+Meanwhile…与此同时
+
+We’re all working online some nights and weekends, responding to emails at odd hours, spending some afternoons on personal time, and taking good vacations
+
+一些晚上和周末，我们都在工作，在非上班的时间回邮件，在私人时间的下午工作，然后休假
+
+An employee pointed out…一个员工指出
+
+We don’t track hours worked per day or per week, so why are we tracking days of vacation per year?
+
+我们并不追踪每天或者每周的工作时间，为什么我们要追踪每年休假了几天呢？
+
+We realized…我们意识到了
+
+We should focus on what people get done, not on how many days worked Just as we don’t have an 9am-5pm workday policy, we don’t need a vacation policy
+我们应该关注人们做了什么，而不是做了多少天。既然我们没有朝九晚五的工作时间规定，我们也就不需要假期规定。
+
+## Netflix Vacation Policy and TrackingNetflix休假规定和考勤管理是
+
+“there is no policy or tracking”
+
+“没有休假制度的规定”
+
+There is also no clothing policy at Netflix, but no one comes to work naked
+
+在Netflix我们也没有着装规定，但也没有人光着身子来上班。
+
+Lesson: you don’t need policies for everything
+
+**教训：你不需要为每样事情都制定规则**
+
+No Vacation Policy Doesn’t Mean No Vacation没有休假规定不等于没有假期
+
+Netflix leaders set good examples by taking big vacations – and coming back inspired to find big ideas
+
+通过讨论休假，Netfilx的领导层设立了很好的榜样，然后回来激发出大的创想
+
+## Another Example of Freedom and Responsibility…自由与责任的其他一些例子
+
+Most companies have complex policies around what you can expense, how you travel, what gifts you can accept, etc. 
+围绕员工如何花销，如何出差，可以接受何种馈赠等等，大多数公司都会制定复杂的政策。
+
+Plus they have whole departments to verify compliance with these policies
+
+再加上一整个部门来核实员工是否遵循了这些政策。
+
+## Netflix Policies for Expensing, Entertainment, Gifts & Travel:Netflix公司关于花销、娱乐、馈赠和出差的政策是
+
+“Act in Netflix’s Best Interest”
+
+最合乎公司利益
+
+## “Act in Netflix’s Best Interest” Generally Means…（“最合乎公司利益”一般指）
+
+- Expense only what you would otherwise not spend, and is worthwhile for work
+- Travel as you would if it were your own money
+- Disclose non-trivial vendor gifts
+- Take from Netflix only when it is inefficient to not take, and inconsequential 
+  - “taking” means, for example, printing personal documents at work or making personal calls on work phone: inconsequential and inefficient to avoid
+
+- 花你应该花的钱，否则就别花，而且这钱应该是为了工作。
+- 出差时就像是在花你自己的钱。
+- 披露重要供应商提供的礼物。
+- 只当不拿会降低效率和不合逻辑的时候，才从公司拿东西。
+  - “拿”的意思，举例说：用公司的设备打印私人的文件，或者用工作座机打私人电话。
+
+## Freedom and Responsibility自由与责任
+
+- Many people say one can’t do it at scale
+- But since going public in 2002, which is traditionally the end of freedom, we’ve substantially increased talent density and employee freedom
+
+- 许多人说一家公司不能等比提升这两点
+- 从2002年我们上市以来，按照传统上市意味着自由的终结，但我们同时充分地提升了人才密度和员工自由。
+
+## Summary of Freedom & Responsibility:自由与责任小结
+
+As We Grow, Minimize Rules
+
+我们成长的同时，把制度降至最少。 
+
+Inhibit Chaos with Ever More High Performance People
+
+雇用更多高绩效人才来抑制混乱的产生。
+
+Flexibility is More Important than Efficiencyin the Long Term
+
+**长期来看，灵活性远比效率重要**
+
+
 #Context, not Control（情景管理而非控制）
 
+
+
+
 #Highly Aligned, Loosely Coupled（认同一致，松散耦合）
+
+
+
 
 #Pay Top of Market（支付市场最高工资）
 
 
+
+
+
 #Promotions & Development （晋升和成长）
+
+
+
+
+
